# tui-dashboard

./: Cargo.toml  README.md  rustfmt.toml
examples/: miku.rs
src/: lib.rs
